# python-package-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
