# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "package-name"

description = "A python package"
keywords = [
]

license = { file = "LICENSE" }
authors = [
  { name = "Calvin Nesbit", email = "cf.nesbit94@gmail.com" },
]

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = [
  "version",
]
dependencies = [
]

optional-dependencies.all = [
]

optional-dependencies.create = [
]

optional-dependencies.dev = [
  "aiohttp",
  "boto3",
  "earthkit-data[mars]>=0.9",
  "earthkit-geo>=0.2",
  "earthkit-meteo",
  "ecmwflibs>=0.6.3",
  "entrypoints",
  "gcsfs",
  "kerchunk",
  "nbsphinx",
  "pandoc",
  "pyproj",
  "pytest",
  "requests",
  "rstfmt",
  "s3fs",
  "sphinx",
  "sphinx-argparse<0.5",
  "sphinx-rtd-theme",
]

optional-dependencies.docs = [
]

optional-dependencies.kerchunk = [
]

optional-dependencies.remote = [
]

optional-dependencies.tests = [
  "pytest",
]

urls.Documentation = "https://anemoi-datasets.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/anemoi-datasets/"
urls.Issues = "https://github.com/ecmwf/anemoi-datasets/issues"
urls.Repository = "https://github.com/ecmwf/anemoi-datasets/"
# Changelog = "https://github.com/ecmwf/anemoi-datasets/CHANGELOG.md"

[tool.setuptools.package-data]
"anemoi.datasets.data" = [
  "*.css",
]

[tool.setuptools_scm]
version_file = "src/package/_version.py"