# Using setup.cfg instead of setup.py to make our live easier
# Instructions here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Big example here: https://github.com/pallets/flask/blob/main/setup.cfg

[metadata]
name = package_name
version = attr: package_name.__version__

[options]
packages = find_namespace:
python_requires = >= 3.11
zip_safe = False
install_requires =
    # numpy
    # An example of a GitHub dependency:
    # tz-utils @ git+ssh://git@github.com/transitionzero/utils.git


[options.packages.find]
include = package_name.*

[options.extras_require]
dev =
    pre-commit
    black
    pytest
    pytest-order
    pytest-asyncio
    pytest-dotenv
    pytest-mock
    pytest-cov
    coverage-badge
    mypy
    tox
    openapi_spec_validator
    # Profiling
    pyprof2calltree
    yappi

[options.entry_points]
# This is an example:
console_scripts =
#     package-build = package_name.mypackage.main:do_something

[tox:tox]
envlist = py311
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.11
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:feo_core}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 104
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations .ipynb_checkpoints

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = transitionzero.org
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
